add initial database code

--- a/KemonoViewer/KemonoViewer/Base.lproj/Main.storyboard
+++ b/KemonoViewer/KemonoViewer/Base.lproj/Main.storyboard
@@ -708,11 +708,37 @@
                     <view key="view" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Gb-8f-jHt">
+                                <rect key="frame" x="126" y="125" width="75" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Fw4-0b-smh">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <segue destination="bTB-HI-BkA" kind="modal" id="iUL-8n-OIn"/>
+                                </connections>
+                            </button>
+                        </subviews>
                     </view>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="655"/>
+        </scene>
+        <!--Image Show View Controller-->
+        <scene sceneID="hSk-8y-itP">
+            <objects>
+                <viewController id="bTB-HI-BkA" customClass="ImageShowViewController" customModule="KemonoViewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="586-8m-nyn">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </view>
+                </viewController>
+                <customObject id="Dxt-zx-LfS" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="589" y="667"/>
         </scene>
     </scenes>
 </document>
