add handleOnePost function

--- a/KemonoViewer/KemonoViewer/Base.lproj/Main.storyboard
+++ b/KemonoViewer/KemonoViewer/Base.lproj/Main.storyboard
@@ -734,6 +734,19 @@
                     <view key="view" id="586-8m-nyn">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j9e-wd-AIo">
+                                <rect key="frame" x="153" y="146" width="75" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Ic1-a0-m0g">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="loadData:" target="bTB-HI-BkA" id="lE8-iA-m1f"/>
+                                </connections>
+                            </button>
+                        </subviews>
                     </view>
                 </viewController>
                 <customObject id="Dxt-zx-LfS" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
