--- a/KemonoViewer_AppKit/KemonoViewer/Base.lproj/Main.storyboard
+++ b/KemonoViewer_AppKit/KemonoViewer/Base.lproj/Main.storyboard
@@ -811,7 +811,7 @@
                             <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Wue-Kg-rb1">
                                 <rect key="frame" x="384" y="272" width="93" height="37"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="无附件" id="UcU-VN-BKC">
-                                    <font key="font" size="31" name=".PingFangUITextSC-Regular"/>
+                                    <font key="font" metaFont="system" size="31"/>
                                     <color key="textColor" name="unemphasizedSelectedTextBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
@@ -1126,6 +1126,14 @@
                 <customObject id="clN-de-REz" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1658" y="835.5"/>
+        </scene>
+        <!--Hosting Controller-->
+        <scene sceneID="DeS-cc-bbj">
+            <objects>
+                <hostingController id="MbE-Ng-FWi" sceneMemberID="viewController"/>
+                <customObject id="sg8-G6-ug9" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2028" y="886"/>
         </scene>
         <!--Image View Controller-->
         <scene sceneID="ao7-wB-ZYv">
